# mate-themes

./: .build.yml  .gitignore  .travis.yml  AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  autogen.sh  configure  configure.ac  configure.in  makepot  mate-themes.pot  meson.build
cursor-themes/: AUTHORS  Makefile.am  Makefile.in  X_cursor  bd_double_arrow  bottom_left_corner  bottom_right_corner  bottom_side  bottom_tee  cell  circle  copy  crossed_circle  dnd-copy  dnd-link  dnd-no-drop  dnd-none  fd_double_arrow  grabbing  hand2  left_ptr  left_side  left_tee  ll_angle  lr_angle  pencil  plus  question_arrow  right_ptr  right_side  right_tee  sb_down_arrow  sb_left_arrow  sb_right_arrow  sb_up_arrow  sb_v_double_arrow  tcross  top_left_corner  top_right_corner  top_side  (+9 more)
cursor-themes/mate-black/: Makefile.am  index.theme.in
cursor-themes/mate-black/cursors/: AUTHORS  Makefile.am
cursor-themes/mate-white/: Makefile.am
cursor-themes/mate-white/cursors/: all-scroll  circle  context-menu  cross  dnd-ask  dnd-link  dnd-move  dotbox  fd_double_arrow  hand1  left_ptr_watch  link  ll_angle  lr_angle  move  pirate  pointer-move  right_side  sb_h_double_arrow  sb_left_arrow  top_left_corner  top_right_corner  top_side  top_tee  ul_angle  ur_angle  xterm
desktop-themes/: Makefile.am  Makefile.in
desktop-themes/AlaDelta/: Makefile.am  index.theme.in
desktop-themes/Aldabra/: Makefile.am  index.theme.in
desktop-themes/Aldabra/gtk-2.0/: Makefile.am  gtkrc
desktop-themes/Aldabra/gtk-3.0/: Makefile.am  gtk-widgets.css
desktop-themes/Aldabra/metacity-1/: Makefile.am  metacity-theme-1.xml  metacity-theme-2.xml  metacity-theme-3.xml
desktop-themes/BlackMATE/: Makefile.am  Makefile.in  README  index.theme.in
desktop-themes/BlackMATE-border/: Makefile.am  index.theme.in
desktop-themes/BlackMATE-border/metacity-1/: Makefile.am  metacity-theme-3.xml
desktop-themes/BlackMATE/apps/: Makefile.am  Makefile.in  yumex.css
desktop-themes/BlackMATE/cinnamon/: Makefile.am  Makefile.in  cinnamon.css
desktop-themes/BlackMATE/gnome-shell/: Makefile.am  gnome-shell.css
desktop-themes/BlackMATE/gtk-2.0/: Makefile.am  Makefile.in  gtkrc
desktop-themes/BlackMATE/gtk-3.0/: Makefile.am  Makefile.in  gnome-applications.css  gtk-main-dark.css  gtk-main.css  gtk-widgets-assets-dark.css  gtk-widgets.css  gtk.css  gtk.gresource  gtk.gresource.xml  mate-applications.css  other-applications.css  settings.ini  settings.ini.in  unity.css  window-controls.css
desktop-themes/BlackMATE/metacity-1/: Makefile.am  Makefile.in  metacity-theme-1.xml  metacity-theme-2.xml  metacity-theme-3.xml
desktop-themes/BlackMATE/unity/: Makefile.am  Makefile.in
desktop-themes/Blue-Submarine/: Makefile.am  Makefile.in  index.theme.in
desktop-themes/Blue-Submarine-border/: Makefile.am  index.theme.in
desktop-themes/Blue-Submarine-border/metacity-1/: Makefile.am  metacity-theme-1.xml
desktop-themes/Blue-Submarine/cinnamon/: Makefile.in  cinnamon.css
desktop-themes/Blue-Submarine/emerald/: Makefile.am  Makefile.in  blue-submarine.emerald
desktop-themes/Blue-Submarine/gtk-2.0/: Makefile.am  Makefile.in  gtkrc
desktop-themes/Blue-Submarine/gtk-3.0/: Makefile.am  Makefile.in  gnome-applications.css  gnome-mdi.css  gtk-dark.css  gtk-widgets-assets.css  gtk-widgets.css  gtk.css  mate-applications.css  menu.css  other-applications.css  scrollbar.css  settings.ini  settings.ini.in  sidebar.css
desktop-themes/Blue-Submarine/unity/: Makefile.am
desktop-themes/BlueMenta/: Makefile.am  Makefile.in  README  index.theme.in
desktop-themes/BlueMenta-border/: Makefile.am  index.theme.in
desktop-themes/BlueMenta-dark/: Makefile.am  README  index.theme  index.theme.in
desktop-themes/ContrastHigh/: Makefile.am  index.theme.in
desktop-themes/ContrastHighInverse/: Makefile.am  Makefile.in  index.theme.in
desktop-themes/ContrastHighLargePrint/: Makefile.am  index.theme.in.in
desktop-themes/ContrastHighLargePrintInverse/: Makefile.am  index.theme.in.in
desktop-themes/ContrastLow/: Makefile.am  index.theme.in
desktop-themes/ContrastLowLargePrint/: Makefile.am  index.theme.in.in
desktop-themes/Fog/: Makefile.am  index.theme.in
desktop-themes/Green-Submarine/: Makefile.am  Makefile.in  index.theme.in
desktop-themes/Green-Submarine-border/: Makefile.am  index.theme.in
desktop-themes/GreenLaguna/: Makefile.am  Makefile.in  README  index.theme.in
desktop-themes/GreenLaguna-border/: Makefile.am  index.theme.in
desktop-themes/HighContrastInverse/: Makefile.am  index.theme.in
desktop-themes/LargePrint/: Makefile.am  index.theme.in.in
desktop-themes/MATE-Openbox/: Makefile.am  README  index.theme.in
desktop-themes/Menta/: Makefile.am  Makefile.in  README  index.theme.in
desktop-themes/Menta-Blue/: Makefile.am  index.theme.in
desktop-themes/Menta-border/: Makefile.am  README  index.theme.in
desktop-themes/Quid/: Makefile.am  index.theme.in
desktop-themes/Shiny/: Makefile.am  index.theme.in
desktop-themes/TraditionalGreen/: Makefile.am  Makefile.in  index.theme.in
desktop-themes/TraditionalOk/: Makefile.am  Makefile.in  index.theme.in
desktop-themes/TraditionalOkTest/: Makefile.am  index.theme.in
desktop-themes/YaruGreen/: Makefile.am  index.theme.in
desktop-themes/YaruOk/: Makefile.am  index.theme.in
gtk-themes/: Makefile.am
gtk-themes/AlaDelta/: Makefile.am  gtkrc
gtk-themes/ContrastHigh/: Makefile.am  create-contrasthigh.c  gtkrc.in
gtk-themes/ContrastHighInverse/: gtkrc.in
gtk-themes/ContrastHighLargePrint/: Makefile.am  gtkrc.in
gtk-themes/ContrastHighLargePrintInverse/: Makefile.am  gtkrc.in
gtk-themes/ContrastLow/: Makefile.am  gtkrc.in
gtk-themes/ContrastLowLargePrint/: Makefile.am  gtkrc.in
gtk-themes/LargePrint/: Makefile.am  gtkrc.in
gtk-themes/Reverse/: Makefile.am
gtk-themes/Shiny/: Makefile.am  gtkrc
gtk-themes/Simply/: Makefile.am  gtkrc
gtk-themes/TraditionalOkClassic/: Makefile.am
gtk-themes/TraditionalOkTest/: Makefile.am  gtkrc
icon-themes/ContrastHigh/: Makefile.am  Makefile.in  index.theme  index.theme.in
(+1037 files in other folders)
