project(
  'mate-themes',
  meson_version: '>= 0.61.2',
  version: '3.22.26',
)

install_subdir(
  'marco-themes',
  install_dir: get_option('datadir'),
)

install_subdir(
  'icon-themes',
  install_dir: get_option('datadir'),
)

install_subdir(
  'desktop-themes',
  install_dir: get_option('datadir'),
)

install_subdir(
  'cursor-themes',
  install_dir: get_option('datadir'),
)
