cursordir = $(datadir)/icons/mate/cursors

cursor_DATA = \
	00008160000006810000408080010102 \
	028006030e0e7ebffc7f7070c0600140 \
	03b6e0fcb3499374a867c041f52298f0 \
	08e8e1c95fe2fc01f976f1e063a24ccd \
	1081e37283d90000800003c07f3ef6bf \
	14fef782d02440884392942c11205230 \
	2870a09082c103050810ffdffffe0204 \
	3085a0e285430894940527032f8b26df \
	3ecb610c1bf2410f44200f48c40d3599 \
	4498f0e0c1937ffe01fd06f973665830 \
	5c6cd98b3f3ebcb1f9c7f1c204630408 \
	6407b0e94181790501fd1e167b474872 \
	640fb0e74195791501fd1ed57b41487f \
	9081237383d90e509aa00f00170e968f \
	9d800788f1b08800ae810202380a0822 \
	arrow \
	AUTHORS \
	bd_double_arrow \
	bottom_left_corner \
	bottom_right_corner \
	bottom_side \
	bottom_tee \
	c7088f0f3e6c8088236ef8e1e3e70000 \
	circle \
	copy \
	cross \
	crossed_circle \
	crosshair \
	cross_reverse \
	d9ce0ab605698f320427677b458ad60b \
	diamond_cross \
	dnd-ask \
	dnd-copy \
	dnd-link \
	dnd-move \
	dnd-none \
	dotbox \
	dot_box_mask \
	double_arrow \
	draft_large \
	draft_small \
	draped_box \
	e29285e634086352946a0e7090d73106 \
	fcf1c3c7cd4491d801f1e1c78f100000 \
	fd_double_arrow \
	fleur \
	grabbing \
	hand \
	hand1 \
	hand2 \
	h_double_arrow \
	help \
	icon \
	left_ptr \
	left_ptr_help \
	left_ptr_watch \
	left_side \
	left_tee \
	link \
	ll_angle \
	lr_angle \
	move \
	pencil \
	pirate \
	plus \
	question_arrow \
	right_ptr \
	right_side \
	right_tee \
	sb_down_arrow \
	sb_h_double_arrow \
	sb_left_arrow \
	sb_right_arrow \
	sb_up_arrow \
	sb_v_double_arrow \
	target \
	tcross \
	top_left_arrow \
	top_left_corner \
	top_right_corner \
	top_side \
	top_tee \
	ul_angle \
	ur_angle \
	v_double_arrow \
	watch \
	X_cursor \
	xterm

EXTRA_DIST = $(cursor_DATA)

MAINTAINERCLEANFILES = \
	Makefile.in

-include $(top_srcdir)/git.mk
