if BUILD_GREENLAGUNA
greenlaguna_SUBDIR = GreenLaguna
endif

SUBDIRS = \
	BlackMATE \
	BlueMenta \
	Blue-Submarine \
	$(greenlaguna_SUBDIR) \
	Green-Submarine \
	HighContrastInverse \
	Menta \
	TraditionalGreen \
	TraditionalOk

DIST_SUBDIRS = \
	BlackMATE \
	BlueMenta \
	Blue-Submarine \
	GreenLaguna \
	Green-Submarine \
	HighContrastInverse \
	Menta \
	TraditionalGreen \
	TraditionalOk

