SUBDIRS = \
	BlackMATE \
	BlackMATE-border \
	BlueMenta \
	BlueMenta-border \
	Blue-Submarine \
	Blue-Submarine-border \
	ContrastHigh \
	GreenLaguna \
	GreenLaguna-border \
	Green-Submarine \
	Green-Submarine-border \
	HighContrastInverse \
	Menta \
	Menta-border \
	TraditionalGreen \
	TraditionalOk

