SUBDIRS = \
	BlackMATE \
	BlackMATE-border \
	BlueMenta-border \
	BlueMenta \
	BlueMenta-dark \
	Blue-Submarine \
	Blue-Submarine-border \
	ContrastHigh \
	GreenLaguna \
	GreenLaguna-border \
	Green-Submarine \
	Green-Submarine-border \
	HighContrastInverse \
	Menta \
	Menta-border \
	TraditionalGreen \
	TraditionalOk \
	YaruOk \
	YaruGreen

