SUBDIRS = \
	AlaDelta \
	Shiny \
	Simply \
	ContrastHighInverse \
	ContrastHighLargePrint \
	ContrastHighLargePrintInverse \
	Reverse \
	ContrastLow \
	ContrastLowLargePrint \
	LargePrint

DIST_SUBDIRS = \
	AlaDelta \
	Shiny \
	Simply \
	ContrastHighInverse \
	ContrastHighLargePrint \
	ContrastHighLargePrintInverse \
	Reverse \
	ContrastLow \
	ContrastLowLargePrint \
	LargePrint

