SUBDIRS = \
	AlaDelta \
	Simply \
	ContrastHighInverse \
	ContrastHighLargePrint \
	ContrastHighLargePrintInverse \
	Reverse \
	ContrastLow \
	ContrastLowLargePrint \
	LargePrint

DIST_SUBDIRS = \
	AlaDelta \
	Simply \
	ContrastHighInverse \
	ContrastHighLargePrint \
	ContrastHighLargePrintInverse \
	Reverse \
	ContrastLow \
	ContrastLowLargePrint \
	LargePrint

