SUBDIRS = \
	AlaDelta \
	Simply \
	ContrastHighLargePrint \
	ContrastHighLargePrintInverse \
	Reverse \
	ContrastLow \
	ContrastLowLargePrint \
	LargePrint

DIST_SUBDIRS = \
	AlaDelta \
	Simply \
	ContrastHighLargePrint \
	ContrastHighLargePrintInverse \
	Reverse \
	ContrastLow \
	ContrastLowLargePrint \
	LargePrint

