THEME_NAME=Blue-Submarine
 
themedir = $(datadir)/themes/$(THEME_NAME)

theme_DATA = index.theme

EXTRA_DIST = $(theme_DATA)

SUBDIRS =		\
	cinnamon	\
	emerald     \
	gtk-2.0		\
	gtk-3.0		\
	metacity-1

DIST_SUBDIRS =	\
	cinnamon	\
	emerald     \
	gtk-2.0		\
	gtk-3.0		\
	metacity-1

CLEANFILES = index.theme
